istio/yaml/egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-eastwest
  namespace: istio-ingress
spec:
  selector:
    istio: eastwestgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - '*'
    tls:
     mode: AUTO_PASSTHROUGH
