istio/yaml/gateway.yaml
#apiVersion: networking.istio.io/v1beta1
#kind: Gateway
#metadata:
#  name: echoserver-internal
#  namespace: istio-ingress
#spec:
#  selector:
#    istio: eastwestgateway
#  servers:
#    - port:
#        number: 15443
#        name: tls
#        protocol: TLS
#      tls:
#        mode: AUTO_PASSTHROUGH
#      hosts:
#        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echoserver-external
  namespace: echoserver
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*.nip.io'
