istio/yaml/cross-network-gateway-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cross-network-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-routing
  namespace: echoserver
spec:
  hosts:
  - echoserver.echoserver.svc.cluster.local
  exportTo:
  - "*"
  gateways:
  - mesh
  - istio-ingress/cross-network-gateway
  http:
  - match:
    - port: 80
      gateways:
      - mesh
    route:
    - destination:
        host: eastwestgateway.istio-ingress.svc.cluster.local
  - match:
    - port: 80
      gateways:
      - istio-ingress/cross-network-gateway
    route:
    - destination:
        host: echoserver.echoserver.svc.cluster.local
