istio/yaml/east-west-cluster1.yaml
# https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-control/#configuring-ingress-using-an-istio-gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cross-cluster-traffic
  namespace: istio-ingress
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.sni_cluster
        portNumber: 15443
    patch:
      operation: INSERT_AFTER
      value:
        name: envoy.filters.network.tcp_cluster_rewrite
        typed_config:
          '@type': type.googleapis.com/istio.envoy.config.filter.network.tcp_cluster_rewrite.v2alpha1.TcpClusterRewrite
          cluster_pattern: \.aks-cluster-one.global$
          cluster_replacement: .cluster.local
  workloadSelector:
    labels:
      istio: eastwestgateway
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoserver.remote
  namespace: echoserver
spec:
  host: echoserver.echoserver.svc.cluster.local
  subsets:
  - name: echoserver-aks-cluster-one
    labels:
      cluster: aks-cluster-one
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
