istio/yaml/gateway-cluster2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver-through-egress-gateway
spec:
  hosts:
  - echoserver.echoserver.svc.cluster.local
  gateways:
  - eastwestgateway
  http:
  - match:
    - gateways:
      - eastwestgateway
      port: 80
    route:
    - destination:
        host: echoserver.echoserver.svc.cluster.local
        port:
          number: 80
      weight: 100
