istio/yaml/internal-route-c1.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echoserver-internal
  namespace: echoserver
spec:
  selector:
    istio: eastwestgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*.local'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echoserver-internal
  namespace: echoserver
spec:
  hosts:
    - 'echoserver.echoserver.svc.cluster.local'
  gateways:
    - echoserver/echoserver-internal
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: echoserver.echoserver.svc.cluster.local
